# tauri-plugin-keyring

./: Cargo.toml  README.md
examples/tauri-app/: package.json
examples/tauri-app/src-tauri/: Cargo.toml
src/: desktop.rs  mobile.rs
